# mandel-canvas

./: .gitignore  README.md  build.sh  gcloudTest.js  generate-clion-build.sh  index.js  main.go  mandel.proto  mandelClient.js  networker.js  package-lock.json  package.json  server.js  service.cpp
final-report/: README.md
final-report/TestResults/: 1-server-go.txt  1-server-node.txt  16-server-go(1).txt  16-server-go.txt  16-server-node(1).txt  16-server-node.txt  32-server-go.txt  32-server-node.txt  4-server-go.txt  4-server-node.txt  64-server-go.txt  64-server-node.txt  8-server-go.txt  8-server-node.txt  96-server-go.txt  96-server-node.txt  FinalProjectTimes.xlsx
mandel/: README.md  imageUtil.go  mandel.go
mandel-go-function-tester/: .gitignore  README.md  main.go
mandel-go-function-tester/mandel/: mandel.pb.go
mandel-server/: .gitignore  README.md  index.js  mandel.proto  mandelClient.js  package-lock.json  package.json  server.js
mandelCanvas/: README.md  buildWindows.sh  gameRenderer.go  gameWidget.go  main.go  mandel.go  mandel64.go  request.go
mouseInteractionTemplateGame/: README.md  game.go  gameRenderer.go  main.go
mutexAdder/: mutexAdder.go  mutexAdder_test.go
unikernel-mandel/: CMakeLists.txt  README.md  build.sh  makeGCloud.sh
waitGroupExample/: waitMany.go  waitMany_test.go
waitOneChannelExample/: waitOne.go  waitOne_test.go
